# chogori-sql

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pg_grafana_dashboard.json
src/k2/connector/: CMakeLists.txt
src/k2/connector/common/: CMakeLists.txt  alignment.h  bind.h  bind_helpers.h  bind_internal.h  casts.h  common-utils.cc  common-utils.h  common_defs.h  endian.h  enums.h  env.cc  env.h  env_posix.cc  errno.cc  errno.h  fault_injection.cc  flag_tags.cc  flag_tags.h  format.h  func_traits.h  gscoped_ptr.h  hexdump.cc  id_mapping.cc  id_mapping.h  init.cc  k2pg-internal.cc  k2pg-internal.h  k2pg_errcodes.h  k2pg_util.cc  k2pg_util.h  macros.h  malloc.cc  malloc.h  oid_generator.cc  oid_generator.h  once.cc  once.h  pgsql_error.cc  pgsql_error.h  (+27 more)
src/k2/connector/common/coding/: coding.cc  coding.h  coding_consts.h
src/k2/connector/common/concurrent/: async_util.cc  async_util.h  atomic.cc  atomic.h  atomic_refcount.h  atomicops-internals-arm-generic.h  atomicops-internals-arm-v6plus.h  atomicops-internals-windows.h  atomicops-internals-x86.cc  atomicops.h  background_task.h  backoff_waiter.h  barrier.h  blocking_queue.h  callback.h  callback_internal.cc  callback_internal.h  condition_variable.cc  condition_variable.h  countdown_latch.cc  countdown_latch.h  high_water_mark.h  lockfree.h  locks.cc  locks.h  mutex.cc  mutex.h  priority_thread_pool.cc  priority_thread_pool.h  promise.h  ref_counted.cc  ref_counted.h  rw_semaphore.h  semaphore.cc  semaphore.h  shared_lock.h  spinlock.cc  spinlock.h  spinlock_internal.cc  spinlock_internal.h  (+12 more)
src/k2/connector/common/hash/: builtin_type_hash.h  city.cc  city.h  hash.cc  hash.h  hash128to64.h  jenkins.cc  jenkins.h  jenkins_lookup2.h  legacy_hash.h  string_hash.h
src/k2/connector/common/log/: logging.cc  logging.h  logging_callback.h
src/k2/connector/common/metrics/: hdr_histogram.cc  hdr_histogram.h  metrics.cc  metrics.h
src/k2/connector/common/strings/: bytes_formatter.cc  bytes_formatter.h  charmap.h  charset.h  escaping.cc  escaping.h  fastmem.h  faststring.cc  faststring.h  human_readable.cc  human_readable.h  join.cc  join.h  split.cc  split.h  split_internal.h  stol_utils.cc  stol_utils.h  strcat.cc  strcat.h  stringpiece.cc  stringpiece.h  stringprintf.cc  stringprintf.h  strip.cc  strip.h  striped64.cc  striped64.h  strtoint.cc  strtoint.h  substitute.cc  substitute.h  tostring.h  util.cc  util.h
src/k2/connector/common/sys/: cpu.cc  cycleclock-inl.h  file_system.cc  file_system.h  file_system_posix.cc  file_system_posix.h  malloc.cc  mem_tracker.cc  mem_tracker.h  memory.cc  memory.h  monotime.cc  monotime.h  sysinfo.cc  walltime.cc  walltime.h
src/k2/connector/common/type/: basictypes.h  bits.cc  bits.h  decimal.cc  decimal.h  int128.cc  int128.h  integral_types.h  mathlimits.cc  numbers.cc  numbers.h  slice.cc  slice.h  tuple.h  type_traits.h  varint.cc  varint.h
src/k2/connector/common/util/: debug-util.cc  debug-util.h  env_util.cc  env_util.h  map-util.h  memutil.cc  memutil.h  net_util.h  os-util.cc  os-util.h  path_util.cc  path_util.h  random_util.cc  stl_util.h
src/k2/connector/entities/: CMakeLists.txt  data_type.h  entity_ids.cc  entity_ids.h  expr.cc  expr.h  index.cc  index.h  schema.cc  schema.h  table.cc  table.h  type.cc  type.h  types.cc  types.h  value.cc  value.h
src/k2/connector/pggate/: CMakeLists.txt  k23si_gate.cc  k23si_seastar_app.h  k2_adapter.cc  k2_adapter.h  k2_config.cc  k2_config.h  k2_future.h  k2_gate.cc  k2_gate.h  k2_includes.h  k2_log.h  k2_log_init.h  k2_metrics_api.h  k2_queue_defs.h  k2_seastar_app.cc  k2_seastar_app.h  k2_session_metrics.h  k2_thread_pool.h  k2_txn.cc  k2_txn.h  pg_column.cc  pg_column.h  pg_ddl.cc  pg_ddl.h  pg_delete.h  pg_dml.cc  pg_dml.h  pg_dml_read.cc  pg_dml_read.h  pg_dml_write.cc  pg_dml_write.h  pg_env.h  pg_gate_api.cc  pg_gate_api.h  pg_gate_defaults.h  pg_gate_impl.cc  pg_gate_impl.h  pg_gate_thread_local_vars.cc  pg_gate_thread_local_vars.h  (+21 more)
src/k2/connector/pggate/catalog/: background_task.h  base_handler.cc  base_handler.h  catalog_log.h  cluster_info_handler.cc  cluster_info_handler.h  database_info_handler.cc  database_info_handler.h  namespace_info_handler.cc  namespace_info_handler.h  sql_catalog_client.cc  sql_catalog_client.h  sql_catalog_defaults.cc  sql_catalog_defaults.h  sql_catalog_entity.cc  sql_catalog_entity.h  sql_catalog_manager.cc  sql_catalog_manager.h  table_info_handler.cc  table_info_handler.h
src/k2/connector/server/: CMakeLists.txt  pg_wrapper.cc  pg_wrapper.h  sql_executor.cc  sql_executor.h
src/k2/connector/utf/: CMakeLists.txt  rune.c
src/k2/connector/yb/common/: CMakeLists.txt  async_util.cc  async_util.h  atomic.cc  atomic.h  atomicops-internals-arm-generic.h  atomicops-internals-arm-v6plus.h  atomicops-internals-windows.h  atomicops-internals-x86.cc  atomicops.h  background_task.h  barrier.h  basictypes.h  bind.h  bind_helpers.h  bind_internal.h  bits.h  blocking_queue.h  builtin_type_hash.h  bytes_formatter.cc  bytes_formatter.h  callback.h  callback_internal.cc  callback_internal.h  casts.h  charmap.h  charset.h  city.cc  city.h  coding_consts.h  condition_variable.cc  condition_variable.h  countdown_latch.cc  countdown_latch.h  cpu.cc  cycleclock-inl.h  debug-util.cc  debug-util.h  endian.h  enums.h  (+110 more)
src/k2/connector/yb/entities/: CMakeLists.txt  data_type.h  entity_ids.cc  entity_ids.h  expr.cc  expr.h  index.cc  index.h  pg_system_attr.h  schema.cc  schema.h  table.cc  table.h  type.cc  type.h  types.cc  types.h  value.cc  value.h
src/k2/connector/yb/pggate/: CMakeLists.txt  cluster_info_handler.cc  cluster_info_handler.h  k23si.cc  k23si.h  k23si_app.cc  k23si_app.h  k23si_gate.cc  k23si_gate.h  k23si_queue_defs.cc  k23si_queue_defs.h  k23si_seastar_app.cc  k23si_seastar_app.h  k23si_txn.cc  k23si_txn.h  k2_adapter.cc  k2_adapter.h  k2_config.cc  k2_config.h  k2_includes.h  k2_log.h  k2_log_init.h  k2_metrics_api.h  k2_session_metrics.h  k2_thread_pool.h  k2client.cc  k2client.h  k2column.cc  k2column.h  k2ddl.cc  k2ddl.h  k2delete.h  k2dml.cc  k2dml.h  k2doc.cc  k2doc.h  k2docapi.cc  (+70 more)
(+522 files in other folders)
